# MX5

./: .gitignore  AGENTS.md  mx5.xlsx
display_logging_module/: readme.md
display_logging_module/SW/: CMakeLists.txt  README.md  architecture.md  benchmark.md  simulator.md
display_logging_module/SW/cmake/: MdfDependencies.cmake
display_logging_module/SW/config/: dash.json  ecm_simulator.json  logging.json  vn300_simulator.json
display_logging_module/SW/dash_ui/: CMakeLists.txt  MiataDash.qmlproject  README.md
display_logging_module/SW/dash_ui/assets/: README.md
display_logging_module/SW/dash_ui/qml/: Main.qml
display_logging_module/SW/dash_ui/qml/components/: AnalogGauge.qml  DashMenuOverlay.qml  DigitalGauge.qml  HistoryChart.qml  WarningOverlay.qml
display_logging_module/SW/dash_ui/qml/pages/: DiagnosticsPage.qml  DrivePage.qml
display_logging_module/SW/dash_ui/src/: main.cpp
display_logging_module/SW/dash_ui/src/backend/: dash_action.h  dash_config_store.cpp  dash_config_store.h  dash_input_controller.cpp  dash_input_controller.h  fake_signal_source.cpp  fake_signal_source.h  ipc_signal_source.cpp  ipc_signal_source.h  navigation_controller.cpp  navigation_controller.h  signal_data_source.h  signal_filter_model.cpp  signal_filter_model.h  signal_history_store.cpp  signal_history_store.h  signal_list_model.cpp  signal_list_model.h  signal_value_provider.cpp  signal_value_provider.h  warning_evaluator.cpp  warning_evaluator.h  warning_manager.cpp  warning_manager.h
display_logging_module/SW/deploy/systemd/: README.md  display-logger.env.example  miata-dash.service  miata-service-web.service  miata-service-web.sudoers  vehicle-loggerd.service
display_logging_module/SW/logs/benchmark_windows/: vehicle_20260715_030044_226.mf4  vehicle_20260715_030050_878.mf4  vehicle_20260715_030204_571.mf4  vehicle_20260715_030210_841.mf4
display_logging_module/SW/service_web/: CMakeLists.txt  README.md
display_logging_module/SW/service_web/src/: main.cpp  service_action_runner.cpp  service_action_runner.h  service_config_manager.cpp  service_config_manager.h  service_data_store.cpp  service_data_store.h  service_log_catalog.cpp  service_log_catalog.h  simple_http_server.cpp  simple_http_server.h
display_logging_module/SW/service_web/static/: index.html
display_logging_module/SW/src/: CMakeLists.txt
display_logging_module/SW/src/apps/: ecm_can_simulator_main.cpp  logger_benchmark_main.cpp  vehicle_loggerd_main.cpp  vn300_simulator_main.cpp
display_logging_module/SW/src/can/: can_bus_endpoint.cpp  can_bus_endpoint.h  can_frame_record.h  can_replay_source.cpp  can_replay_source.h  candump_codec.cpp  candump_codec.h  dbc_decoder.cpp  dbc_decoder.h
display_logging_module/SW/src/core/: signal_definition.h  signal_registry.cpp  signal_registry.h  signal_sample.h  source_health_monitor.cpp  source_health_monitor.h
display_logging_module/SW/src/ipc/: replay_control.cpp  replay_control.h  signal_ipc_protocol.cpp  signal_ipc_protocol.h  signal_ipc_server.cpp  signal_ipc_server.h
display_logging_module/SW/src/logging/: async_session_logger.cpp  async_session_logger.h  decoded_log_policy.cpp  decoded_log_policy.h  log_sink.h  log_storage_manager.cpp  log_storage_manager.h  mdf4_log_sink.cpp  mdf4_log_sink.h  session_log_sink.cpp  session_log_sink.h
display_logging_module/SW/src/platform/: process_termination_monitor.cpp  process_termination_monitor.h  systemd_notifier.cpp  systemd_notifier.h
display_logging_module/SW/src/sim/: ecm_simulator.cpp  ecm_simulator.h  vn300_simulator.cpp  vn300_simulator.h  wcm_simulator.cpp  wcm_simulator.h
display_logging_module/SW/src/vn300/: vn300_binary_parser.cpp  vn300_binary_parser.h  vn300_local_source.cpp  vn300_local_source.h  vn300_log_codec.cpp  vn300_log_codec.h  vn300_packet_record.h  vn300_replay_source.cpp  vn300_replay_source.h  vn300_serial_source.cpp  vn300_serial_source.h
display_logging_module/SW/tests/: CMakeLists.txt  async_session_logger_test.cpp  can_replay_source_test.cpp  candump_codec_test.cpp  dash_configuration_test.cpp  dash_input_controller_test.cpp  dash_interaction_controller_test.cpp  dash_signal_model_test.cpp  dbc_decoder_test.cpp  decoded_log_policy_test.cpp  ecm_simulator_test.cpp  log_storage_manager_test.cpp  replay_control_test.cpp  service_web_test.cpp  session_log_sink_test.cpp  signal_ipc_integration_test.cpp  signal_ipc_protocol_test.cpp  signal_registry_test.cpp  source_health_monitor_test.cpp  systemd_notifier_test.cpp  vn300_binary_parser_test.cpp  vn300_simulator_test.cpp  wcm_dash_integration_test.cpp  wcm_simulator_test.cpp
display_logging_module/SW/tools/: start_dev_stack.ps1
display_logging_module/SW/wcm_simulator_ui/: CMakeLists.txt
display_logging_module/SW/wcm_simulator_ui/qml/: Main.qml
display_logging_module/SW/wcm_simulator_ui/src/: main.cpp
logs/benchmark_windows/: vehicle_20260715_030014_292.mf4
logs/mdf_validation_20260714_215636/: vehicle_20260715_025636_335.mf4
logs/rate_group_validation_20260714_212427/: vehicle_20260715_022427_690.signals.csv
power_distribution_module/: pdm_state_machine.mermaid  readme.md
shared/: miata.dbc  readme.md
